--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.2.0
   shimmer: ^3.0.0
+  simple_gradient_text: ^1.3.0
   cached_network_image: ^3.4.1
   device_preview: ^1.3.1
 
