--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   logger: ^2.6.1
   rename_app: ^1.6.5
 
+  # Util
+  url_launcher: ^6.3.2
+
 # ===========================
 # Dev Dependencies
 # ===========================
@@ -93,7 +96,7 @@ flutter:
     - assets/fonts/Roboto/
 
     - assets/icons/App_Icon/
-    - assets/icons/LandingPage/
+    - assets/icons/Home/
     - assets/icons/Bottom_Nav_Bar/
 
     - assets/imgs/Home/
