--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,10 @@ dependencies:
   # UI & Layout
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.2.0
-  shimmer: ^3.0.0
   simple_gradient_text: ^1.3.0
   cached_network_image: ^3.4.1
-  device_preview: ^1.3.1
+  lottie: ^3.3.1
+  responsive_framework: ^1.5.1
 
   # Routing
   go_router: ^16.2.0
@@ -46,11 +46,10 @@ dependencies:
   # Logging & Utilities
   logger: ^2.6.1
   rename_app: ^1.6.5
+  flutter_launcher_icons: ^0.14.4
 
   # Util
   url_launcher: ^6.3.2
-  webview_flutter: ^4.4.2
-  webview_flutter_web: ^0.2.2+4
 
 # ===========================
 # Dev Dependencies
@@ -110,8 +109,9 @@ flutter:
     - assets/icons/Bottom_Nav_Bar/
 
     - assets/imgs/Home/
+    - assets/imgs/Projects/
     
-    - assets/jsons/
+    - assets/jsons/Lottie/
 
 # ===========================
 # Flutter Intl Configuration
